fix: change favicon, logo, header width, border-radius and padding for languages

--- a/src/styles/header/burger.scss
+++ b/src/styles/header/burger.scss
@@ -7,7 +7,7 @@
   cursor: pointer;
   display: none;
   position: relative;
-  right: 20px;
+  right: 1em;
   border: none;
   background: transparent;
   width: 40px;
