--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -5,16 +5,13 @@
 }
 
 .header__container {
-  max-width: 1440px;
   height: 80px;
-  margin: 0 auto;
   @include flex (space-between, center);
-}
-
-.header__logo-link {
-  padding-left: 20px;
+  gap: 30px;
 }
 
 .header__logo {
   height: 50px;
+  width: auto;
+  padding-left: 1em;
 }
