--- a/src/styles/header/languages.scss
+++ b/src/styles/header/languages.scss
@@ -7,13 +7,12 @@
   position: absolute;
   background-color: #f9f9f9;
   z-index: 1;
-  border-radius: 10px;
 }
 
 .header__main-language {
   display: flex;
   align-items: center;
-  padding: 16px 20px 16px 50px;
+  padding: 16px 1em 16px 50px;
   transition: 0.3s ease-in-out;
 
   @media screen and (max-width: 768px) {
@@ -26,8 +25,7 @@
   align-items: center;
   color: $color-main;
   text-align: center;
-  padding: 12px 16px 8px;
-  border-radius: 10px;
+  padding: 12px 10px 8px;
 }
 
 .header__main-language::before {
