--- a/src/styles/global/variables.scss
+++ b/src/styles/global/variables.scss
@@ -1,5 +1,6 @@
-$color-main: #262e33;
+$color-main: #263238;
 $color-accent: #ffd957;
+$color-accent-light: #FFF4CD;
 $color-white: #ffffff;
 
 $color-text: #7f7f80;
