--- a/src/styles/intro/intro.scss
+++ b/src/styles/intro/intro.scss
@@ -1,22 +1,20 @@
 .intro {
-  width: 100%;
-  height: auto;
+  @extend .full-dimentions;
   background-color: $color-accent;
 }
 
 .intro__container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: calc((3 - 1.15)* 1.1vw + .8rem);
-  padding: calc((7 - 1.15)* 1.1vw + .8rem) 1em;
+  @include flex (center, center);
+  gap: calc((5 - 1.15)* 1.1vw + .8rem);
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+  }
 }
 
 .intro__title {
-  font-weight: 600;
+  @extend .main-title;
   font-size: calc((5 - 1.15)* 1.1vw + .8rem);
-  color: $color-main;
-  text-align: center;
 }
 
 .intro__title-box-dash {
@@ -35,15 +33,13 @@
 
 .intro__description {
   font-weight: 300;
-  line-height: 1;
-  font-size: calc((1.5 - 1.15)* 1.1vw + .8rem);
+  font-size: calc((1.8 - 1.15)* 1.1vw + .8rem);
   text-align: center;
   color: $text-additional;
+  margin-top: calc((2 - 1.15)* 1.1vw + .8rem);
 }
 
-// .intro__button {
-//   border: 1px solid $color-main;
-//   border-radius: 4px;
-//   padding: calc((1.5 - 1.15)* 1.1vw + .8rem) calc((3 - 1.15)* 1.1vw + .8rem);
-//   font-size: calc((1.5 - 1.15)* 1.1vw + .8rem);
-// }
+.intro__image {
+  width: calc((40 - 1.15)* 1.1vw + .8rem);
+  height: auto;
+}
