--- a/src/styles/intro/intro.scss
+++ b/src/styles/intro/intro.scss
@@ -1,9 +1,11 @@
 .intro {
   @extend .full-dimentions;
   background-color: $color-accent;
+  cursor: default;
 }
 
 .intro__container {
+  @extend .container;
   @include flex (center, center);
   gap: calc((5 - 1.15)* 1.1vw + .8rem);
 
@@ -20,7 +22,11 @@
 .intro__title-box-dash {
   display: inline-block;
   border: 2px dashed $color-main;
+  will-change: visibility, transform, opacity;
+}
 
+.intro__title-box-dash.animate {
+  animation: slideInLeft 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 .intro__title-box-inner {
@@ -33,10 +39,10 @@
 
 .intro__description {
   font-weight: 300;
-  font-size: calc((1.8 - 1.15)* 1.1vw + .8rem);
+  font-size: calc((1.6 - 1.15)* 1.1vw + .8rem);
   text-align: center;
   color: $text-additional;
-  margin-top: calc((2 - 1.15)* 1.1vw + .8rem);
+  margin-block-start: calc((2.5 - 1.15)* 1.1vw + .8rem);
 }
 
 .intro__image {
