--- a/src/style.scss
+++ b/src/style.scss
@@ -3,8 +3,8 @@
 @import './styles/global/fonts.scss';
 @import './styles/global/variables.scss';
 @import './styles/global/mixins.scss';
-@import './styles/global/animations/bounce-in-top.scss';
-@import './styles/global/animations/slide-in-left.scss';
+@import './styles/global/animations/left-right.scss';
+@import './styles/global/animations/fade-in.scss';
 
 @import './styles/header/header.scss';
 @import './styles/header/navigation.scss';
@@ -12,8 +12,8 @@
 @import './styles/header/languages.scss';
 
 @import './styles/intro/intro.scss';
-
 @import './styles/advantages/advantages.scss';
+@import './styles/timeline/timeline.scss';
 
 html,
 body {
@@ -46,10 +46,14 @@ ul {
   list-style: none;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  padding: calc((7 - 1.15)* 1.1vw + .8rem) 1rem;
+  padding: calc((5 - 1.15)* 1.1vw + .8rem) 1rem calc((7 - 1.15)* 1.1vw + .8rem);
 }
 
 .flex-col-center {
@@ -64,6 +68,7 @@ ul {
 }
 
 .main-title {
+  max-width: 750px;
   font-weight: 600;
   color: $color-main;
   text-align: center;
