--- a/src/styles/global/variables.scss
+++ b/src/styles/global/variables.scss
@@ -2,7 +2,7 @@ $color-main: #263238;
 $color-accent: #ffd957;
 $color-accent-light: #FFF4CD;
 $color-white: #ffffff;
-
+$color-bg: #eeeeee;
+$color-border: #f5f5f5;
 $color-text: #7f7f80;
-
 $text-additional: #4D5459;
