feat: add `Promo` section

--- a/src/style.scss
+++ b/src/style.scss
@@ -14,6 +14,7 @@
 @import './styles/intro/intro.scss';
 @import './styles/advantages/advantages.scss';
 @import './styles/timeline/timeline.scss';
+@import './styles/promo/promo.scss';
 
 html,
 body {
