feat: add footer

--- a/src/style.scss
+++ b/src/style.scss
@@ -15,6 +15,7 @@
 @import './styles/advantages/advantages.scss';
 @import './styles/timeline/timeline.scss';
 @import './styles/promo/promo.scss';
+@import './styles/footer/footer.scss';
 
 html,
 body {
