feat: add contact page

--- a/src/style.scss
+++ b/src/style.scss
@@ -17,6 +17,8 @@
 @import './styles/promo/promo.scss';
 @import './styles/footer/footer.scss';
 
+@import './pages/contact/contact.scss';
+
 html,
 body {
   @extend .full-dimentions;
