--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -5,7 +5,7 @@
 }
 
 .footer__copyright {
-  color: $color-text;
+  color: $color-footer;
   text-align: center;
   font-weight: 300;
   font-size: 0.9em;
