--- a/src/styles/global/variables.scss
+++ b/src/styles/global/variables.scss
@@ -5,4 +5,5 @@ $color-white: #ffffff;
 $color-bg: #eeeeee;
 $color-border: #f5f5f5;
 $color-text: #7f7f80;
+$color-footer: #9c9c9c;
 $text-additional: #4D5459;
